# code-for-blogpost

./: .gitignore  README.md
alacritty_setting/: alacritty.toml
alb_vs_nlb/: .gitignore  README.md  alb.py  locust_result.ipynb  pyproject.toml
controlflow_introduction/: README.md  pyproject.toml
controlflow_introduction/src/: hello_agents.py  hello_flow.py  hello_task.py  hello_user.py  hello_world.py
controlflow_introduction/src/sandbox/: agent.py  assign_agents_to_flow.py  auto_execution.py  basic_type.py  constrained_choice.py  control_flow.py  control_interat.py  custom_tools.py  default_results.py  defini_tasks_and_tools.py  flow_deco.py  hello.py  pydantic_models.py  structured_inputs.py  task_dep.py  user_instruction.py
controlflow_introduction/src/software_engineer_example/: engineer.py
controlflow_introduction/src/software_engineer_example/URLExtractor/: go.mod  main.go
digdag_multiple_condition/: handle_multiple_variable.dig  variable_as_string.dig
firehose_load_iceberg/: .gitignore  README.md  pyproject.toml  send_ses_data_to_firehose.py
glue_job_iceberg_schema_change/: .gitignore  README.md  pyproject.toml  ruff.toml
glue_job_iceberg_test/: README.md  pyproject.toml  ruff.toml
glue_job_s3_test/: README.md  compose.yaml  pyproject.toml
lambda_invoke_ses/: Dockerfile  Makefile  README.md  pyproject.toml
memray/: .gitignore  README.md
nox_introduction/: README.md
prefect3_introduction/: README.md  pyproject.toml
prefect3_introduction/src/: cache_test.py  create_deployment.py  error_sample.py  quick_start.py  variable_test.py
(+184 files in other folders)
