[project]
name = "prefect3-introduction"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "nsakki55", email = "n.sakki55@gmail.com" }
]
dependencies = [
    "controlflow>=0.8.2",
]
readme = "README.md"
requires-python = ">= 3.10"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/prefect3_introduction"]
